--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -802,7 +802,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tCEZ5zPe07 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tCEZ5zPe07 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1197,7 +1197,7 @@ a {
   color: #ffffff;
 }
 .cid-tiQGznNuFD {
-  padding-top: 45px;
+  padding-top: 15px;
   padding-bottom: 255px;
   background-color: #ffffff;
   background: linear-gradient(#ffffff, #ffffff);
@@ -1850,7 +1850,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tCEZ5zPe07 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tCEZ5zPe07 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -2402,7 +2402,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tCEZ5zPe07 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tCEZ5zPe07 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -2885,7 +2885,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tCEZ5zPe07 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tCEZ5zPe07 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -3429,7 +3429,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tCEZ5zPe07 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tCEZ5zPe07 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -3930,7 +3930,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tCEZ5zPe07 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tCEZ5zPe07 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -4431,7 +4431,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tCEZ5zPe07 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tCEZ5zPe07 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -4932,7 +4932,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tCEZ5zPe07 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tCEZ5zPe07 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -5338,8 +5338,8 @@ a {
 }
 .cid-tEn8rEKMvD img {
   width: 100%;
-  -webkit-mask-box-image: url("../../../assets/images/blob1-1.webp");
-  mask-image: url("../../../assets/images/blob1-1.webp");
+  -webkit-mask-box-image: url("../../../assets/images/techlink-logistics-logo3-rrss-300x300.webp");
+  mask-image: url("../../../assets/images/techlink-logistics-logo3-rrss-300x300.webp");
   -webkit-mask-box-image-repeat: space;
   -webkit-mask-position: center center;
   mask-position: center center;
@@ -5355,7 +5355,7 @@ a {
   left: 10%;
 }
 .cid-tEn8rEKMvD .counter .full-circle {
-  background-color: #848abd;
+  background-color: #31415e;
   display: inline-block;
   border-radius: 50%;
   min-width: 100px;
@@ -5586,7 +5586,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tCEZ5zPe07 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tCEZ5zPe07 .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -6087,7 +6087,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tECrjQ0zBO .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tECrjQ0zBO .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -6588,7 +6588,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tEI0KJfwcf .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tEI0KJfwcf .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -7089,7 +7089,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tF1blFd0JP .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tF1blFd0JP .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -7590,7 +7590,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-tEZLGnaXlX .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 6rem);
+    max-height: calc(98.5vh - 5.7rem);
   }
 }
 .cid-tEZLGnaXlX .navbar.collapsed .dropdown-menu .dropdown-submenu {
